--- a/src/notes/vuecourse/13.md
+++ b/src/notes/vuecourse/13.md
@@ -130,7 +130,7 @@ let baseCheckboxDemo = new Vue({
 3. 根元素实际上是一个 `<label>`:``父级的 .native 监听器将静默失败。它不会产生任何报错，但是 onFocus 处理函数不会如你预期地被调用。
 
 ```html
-<div id="base-input-demo">
+<div id="base-input-error-demo">
   <base-input
     v-model="label"
     v-bind:label="label"
@@ -152,8 +152,8 @@ Vue.component("base-input", {
         </label>
         `
 });
-let baseInputDemo = new Vue({
-  el: "#base-input-demo",
+let baseInputErrorDemo = new Vue({
+  el: "#base-input-error-demo",
   data: {
     label: "base-label",
     value: ""
@@ -172,9 +172,12 @@ let baseInputDemo = new Vue({
 Vue 提供了一个 \$listeners 属性，它是一个对象，里面包含了作用在这个组件上的所有监听器。
 
 ```html
-<base-input v-on:focus.native="onFocus"></base-input>
-<div id="app05">
-  <base-input v-model="label" v-bind:label="label"></base-input>
+<div id="base-input-demo">
+  <base-input
+    v-model="label"
+    v-bind:label="label"
+    v-on:focus.native="onFocus"
+  ></base-input>
 </div>
 ```
 
@@ -212,8 +215,8 @@ Vue.component("base-input", {
     </label>
   `
 });
-new Vue({
-  el: "#app05",
+let baseInputDemo = new Vue({
+  el: "#base-input-demo",
   data: {
     label: "256",
     value: ""
@@ -225,19 +228,22 @@ new Vue({
 
 :::snippet `.sync` 修饰符
 
-> 推荐以 update:myPropName 的模式触发事件取而代之。
-> 在一个包含 title prop 的假设的组件
-> 注意带有 .sync 修饰符的 v-bind 不能和表达式一起使用 (例如 v-bind:title.sync=”doc.title + ‘!’” 是无效的)。取而代之的是，你只能提供你想要绑定的属性名，类似 v-model。
+1. 推荐以 update:myPropName 的模式触发事件取而代之。
+2. 在一个包含 title prop 的假设的组件 this.\$emit('update:title', newTitle)
+
+> 注意带有 .sync 修饰符的 v-bind 不能和表达式一起使用 (例如 v-bind:title.sync=”doc.title + ‘!’” 是无效的)。取而代之的是，你只能提供你想要绑定的属性名，类似 v-model。<br/>
 > 将 v-bind.sync 用在一个字面量的对象上，例如 v-bind.sync=”{ title: doc.title }”，是无法正常工作的，因为在解析一个像这样的复杂表达式的时候，有很多边缘情况需要考虑。
 
 ```html
-<text-document
-  v-bind:title="doc.title"
-  v-on:update:title="doc.title = $event"
-></text-document>
-<text-document v-bind:title.sync="doc.title"></text-document>
-<div id="app08">
-  {{ doc.title }}
+<div id="base-document-demo">
+  <text-document
+    v-bind:title="doc.title"
+    v-on:update:title="doc.title = $event"
+  ></text-document>
+  <text-document v-bind:title.sync="doc.title"></text-document>
+  <br />
+  doc.title: {{ doc.title }}
+  <br />
   <base-document
     v-bind:title="doc.title"
     v-on:update:title="doc.title =$event"
@@ -273,16 +279,13 @@ Vue.component("base-document", {
       );
     }
   },
-  template: `
-                    <div style="color:blue">
-                                 <h2> {{title}}</h2>
-                               <input  v-bind="$attrs"
-                                    v-bind:value="title"
-                                    v-on="inputListeners"  >
-                      </div>`
+  template: `<div style="color:blue">
+              <h2> {{title}}</h2>
+              <input  v-bind="$attrs" v-bind:value="title" v-on="inputListeners"  >
+            </div>`
 });
-app08 = new Vue({
-  el: "#app08",
+let baseDocumentDemo = new Vue({
+  el: "#base-document-demo",
   data: {
     doc: {
       title: "text-document"
