--- a/src/notes/vuecourse/14.md
+++ b/src/notes/vuecourse/14.md
@@ -31,9 +31,7 @@ let navigationLinkDemo = new Vue({
 :::
 
 :::snippet 编译作用域
-当组件渲染的时候，`<slot></slot>`将会被替换为`组件起始标签和结束标签之间的任何内容`。
-
-> `<navigation-link>` 没有包含一个 `<slot>` 元素，则任何传入它的内容都会被抛弃
+该插槽跟模板的其它地方一样可以访问相同的实例属性 (也就是相同的`作用域`)，而不能访问`<navigation-link>`的作用域。
 
 ```html
 <div id="navigation-link-demo-2">
