--- a/src/notes/vuecourse/15.md
+++ b/src/notes/vuecourse/15.md
@@ -1,148 +1,293 @@
-:::snippet 插槽内容
-
-> `<navigation-link>` 没有包含一个 `<slot>` 元素，则任何传入它的内容都会被抛弃
+:::snippet 在动态组件上使用`keep-alive`
 
 ```html
-<div id="app01">
-    <navigation-link url="/profile">
-        <span class="fa fa-user">ceshi </span>
-        Your Profile {{ username }}
-    </navigation-link>
+<div id="dynamic-component-demo" class="demo">
+  <button
+    v-for="tab in tabs"
+    v-bind:key="tab"
+    v-bind:class="['dynamic-component-demo-tab-button', { 'dynamic-component-demo-active': currentTab === tab }]"
+    v-on:click="currentTab = tab"
+  >
+    {{ tab }}
+  </button>
+  <component
+    v-bind:is="currentTabComponent"
+    class="dynamic-component-demo-tab"
+  ></component>
+</div>
+<br />
+<div id="dynamic-component-keep-alive-demo" class="demo">
+  <!-- 我们可以用一个 <keep-alive> 元素将其动态组件包裹起来。 失活的组件将会被缓存！-->
+  <button
+    v-for="tab in tabs"
+    v-bind:key="tab"
+    v-bind:class="['dynamic-component-demo-tab-button', { 'dynamic-component-demo-active': currentTab === tab }]"
+    v-on:click="currentTab = tab"
+  >
+    {{ tab }}
+  </button>
+  <keep-alive>
+    <component
+      v-bind:is="currentTabComponent"
+      class="dynamic-component-demo-tab"
+    ></component>
+  </keep-alive>
 </div>
 ```
 
 ```javascript
-Vue.component('navigation-link', {
-    props: ['url'],
-    template: ` <a v-bind:herf="url" class="nav-link">
-                            <slot></slot>
-                </a>`
+Vue.component("tab-posts", {
+  data: function() {
+    return {
+      posts: [
+        {
+          id: 1,
+          title: "儒释道",
+          content: "<p>儒心是妖，佛心是魔，道心是鬼。</p>"
+        },
+        {
+          id: 2,
+          title: "三教",
+          content:
+            "<p>天地不仁，道吞万物。大爱无情，佛灭众生。 忠义荡然，儒溺千古。</p>"
+        },
+        {
+          id: 3,
+          title: "神魔非我",
+          content: "<p>魔心开杀，神意止杀。</p>"
+        }
+      ],
+      selectedPost: null
+    };
+  },
+  template: `<div class="dynamic-component-demo-posts-tab">
+                      <ul class="dynamic-component-demo-posts-sidebar">
+                        <li
+                          v-for="post in posts"
+                          v-bind:key="post.id"
+                          v-bind:class="{ 'dynamic-component-demo-active': post === selectedPost }"
+                          v-on:click="selectedPost = post"
+                        >
+                          {{ post.title }}
+                        </li>
+                      </ul>
+                      <div class="dynamic-component-demo-post-container">
+                        <div
+                          v-if="selectedPost"
+                          class="dynamic-component-demo-post"
+                        >
+                          <h3>{{ selectedPost.title }}</h3>
+                          <div v-html="selectedPost.content"></div>
+                        </div>
+                        <strong v-else>
+                            点击左边的博客标题查看。
+                        </strong>
+                      </div>
+                    </div>`
 });
-app01 = new Vue({
-    el: '#app01',
-    data: {
-        url: '',
-        username: '用户名'
+Vue.component("tab-archive", {
+  template: "<div>存档组件</div>"
+});
+let dynamicComponentDemo = new Vue({
+  el: "#dynamic-component-demo",
+  data: {
+    currentTab: "Posts",
+    tabs: ["Posts", "Archive"]
+  },
+  computed: {
+    currentTabComponent: function() {
+      return "tab-" + this.currentTab.toLowerCase();
     }
+  }
 });
+let dynamicComponentKeepAliveDemo = new Vue({
+  el: "#dynamic-component-keep-alive-demo",
+  data: {
+    currentTab: "Posts",
+    tabs: ["Posts", "Archive"]
+  },
+  computed: {
+    currentTabComponent: function() {
+      return "tab-" + this.currentTab.toLowerCase();
+    }
+  }
+});
+```
+
+```css
+.dynamic-component-demo-tab-button {
+  padding: 6px 10px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  background: #f0f0f0;
+  margin-bottom: -1px;
+  margin-right: -1px;
+}
+.dynamic-component-demo-tab-button:hover {
+  background: #e0e0e0;
+}
+.dynamic-component-demo-tab-button.dynamic-component-demo-active {
+  background: #e0e0e0;
+}
+.dynamic-component-demo-tab {
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+.dynamic-component-demo-posts-tab {
+  display: flex;
+}
+.dynamic-component-demo-posts-sidebar {
+  max-width: 40vw;
+  margin: 0 !important;
+  padding: 0 10px 0 0 !important;
+  list-style-type: none;
+  border-right: 1px solid #ccc;
+}
+.dynamic-component-demo-posts-sidebar li {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  cursor: pointer;
+}
+.dynamic-component-demo-posts-sidebar li:hover {
+  background: #eee;
+}
+.dynamic-component-demo-posts-sidebar li.dynamic-component-demo-active {
+  background: lightblue;
+}
+.dynamic-component-demo-post-container {
+  padding-left: 10px;
+}
+.dynamic-component-demo-post > :first-child {
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+}
 ```
 
 :::
 
-:::snippet 具名插槽
-
-> `<slot>` 元素有一个特殊的特性：name。这个特性可以用来定义额外的插槽：
-> 在向具名插槽提供内容的时候，我们可以在一个父组件的 `<template>` 元素上使用 slot 特性
-> 另一种 `slot` 特性的用法是直接用在一个普通的元素上
-> 组件模板里的 `<slot>` 标签内部指定默认的内容来做到插槽的默认内容。
-> 父组件模板的所有东西都会在父级作用域内编译；子组件模板的所有东西都会在子级作用域内编译。
+:::snippet 异步组件
 
 ```html
-<div id="app02">
-    <base-layout>
-        <template slot="header">
-            <h1>Here might be a page title</h1>
-        </template>
-        <p>test内容1</p>
-        <template slot="main">
-            <p>main内容</p>
-        </template>
-        <p>test内容2</p>
-        <template slot="footer">
-            <p>Here's some contact info</p>
-        </template>
-    </base-layout>
-
-    <base-layout>
-        <h2 slot="header">Here might be a page title</h2>
-        <p>test内容1</p>
-        <p slot="main">main内容</p>
-        <p>test内容2</p>
-        <!-- <p slot="footer">Here's some contact info</p> -->
-    </base-layout>
+<div id="async-a-demo">
+  async-a
+  <async-a></async-a>
+</div>
+<div id="async-b-demo">
+  async-b
+  <async-b></async-b>
+</div>
+<div id="async-c-demo">
+  async-c
+  <async-c></async-c>
 </div>
 ```
 
 ```javascript
-Vue.component('base-layout', {
-    template: `
-                    <div class="container">
-  <header>
-    <slot name="header">页头</slot>
-  </header>
-  <main>
-    <slot name="main">内容</slot>
-  </main>
-  <template>
-    <slot ></slot>
-  </template>
-  <footer>
-    <slot name="footer">页脚</slot>
-  </footer>
-</div>
-                    `
+Vue.component("async-a", function(resolve, reject) {
+  setTimeout(function() {
+    resolve({
+      template: "<div>我是async。</div>"
+    });
+    //  reject(reason);
+  }, 5000);
 });
-app02 = new Vue({
-    el: '#app02',
-    data: {
-        header: '开头',
-        maintest:
-            '达瓦大无多军哇多爱我的娃大王卡的进口量达我觉得的AWK的我的看完打开 爱我的骄傲未打卡我、‘ 、答案为了 ',
-        footer: '结束'
-    }
+new Vue({
+  el: "#async-a-demo"
 });
+// //将异步组件和 webpack 的 code-splitting 功能一起配合使用
+// Vue.component('async-b', function (resolve) {
+//     // 这个特殊的 `require` 语法将会告诉 webpack
+//     // 自动将你的构建代码切割成多个包，这些包
+//     // 会通过 Ajax 请求加载
+//     require(['./my-async-component'], resolve);
+// });
+//在工厂函数中返回一个 Promise
+Vue.component(
+  "async-b",
+  // 这个 `import` 函数会返回一个 `Promise` 对象。
+  () => import("./my-async-component.js")
+);
+
+new Vue({
+  el: "#async-b-demo"
+});
+
+new Vue({
+  el: "#async-c-demo",
+  components: {
+    "async-c": () => import("./my-async-component.js")
+  }
+});
+```
+
+`my-async-component.js`
+
+```javascript
+var myComponent = {
+  template: "<h3>my-async-component</h3>"
+};
+export default myComponent;
 ```
 
 :::
 
-:::snippet 作用域插槽
-
-> `slot-scope` 不再限制在`<template>`元素上使用，而可以用在插槽内的任何元素或组件上。
-> 解构 `slot-scope`
+:::snippet 处理加载状态
+异步组件工厂函数也可以返回一个如下格式的对象
 
 ```html
-<div id="app03">
-    <todo-list v-bind:todos="todos">
-        <template slot-scope="slotProps">
-            <span v-if="slotProps.todo.isComplete">√</span>
-            {{ slotProps.todo.text }}
-        </template>
-    </todo-list>
-    <hr />
-    <todo-list v-bind:todos="todos">
-        <template slot-scope="{ todo }">
-            <span v-if="todo.isComplete">✓</span>
-            {{ todo.text }}
-        </template>
-    </todo-list>
+<div id="my-component-demo">
+  <my-component></my-component>
 </div>
 ```
 
 ```javascript
-Vue.component('todo-list', {
-    props: ['todos'],
-    template: `
-                    <ul>
-                    <li  v-for="todo in todos" v-bind:key="todo.id">
-                    <slot v-bind:todo="todo">
-                    {{todo.text}}
-                    </slot>
-                    </li>
-                    </ul>
-                    `
+var LoadingComponent = {
+  /* ... */
+};
+var ErrorComponent = {
+  /* ... */
+};
+const AsyncComponent = () => ({
+  // 需要加载的组件 (应该是一个 `Promise` 对象)
+  component: import("./MyComponent.vue"),
+  // 异步组件加载时使用的组件
+  loading: LoadingComponent,
+  // 加载失败时使用的组件
+  error: ErrorComponent,
+  // 展示加载时组件的延时时间。默认值是 200 (毫秒)
+  delay: 200,
+  // 如果提供了超时时间且组件加载也超时了，
+  // 则使用加载失败时使用的组件。默认值是：`Infinity`
+  timeout: 3000
 });
-app03 = new Vue({
-    el: '#app03',
-    data: {
-        todos: [
-            { id: 1, text: '小白', isComplete: true },
-            { id: 2, text: '小强', isComplete: true },
-            { id: 3, text: '小明', isComplete: false },
-            { id: 4, text: '咪咪', isComplete: true },
-            { id: 5, text: '妹妹', isComplete: false }
-        ]
-    }
+new Vue({
+  el: "#my-component-demo",
+  components: {
+    "my-component": () => AsyncComponent
+  }
 });
+```
+
+`MyComponent.vue`
+
+```html
+<template>
+  <div class="hv-snippet">
+    <h2 class="hv-snippet--title">我是MyComponent组件</h2>
+  </div>
+</template>
+<script>
+export default {
+  data() {
+    return { title: "我是MyComponent组件" };
+  },
+   template: "<h3>我是MyComponent组件</h3>"
+};
+</script>
+
 ```
 
 :::
