--- a/src/notes/01base/01.md
+++ b/src/notes/01base/01.md
@@ -162,8 +162,8 @@
         <option>中年</option>
         <option>老年</option>
     </select>
-    <label for="notes"> 备注： </label>
-    <textarea id="notes" cols="每行中的字符数" rows="显示的行数">
+    <label for="note"> 备注： </label>
+    <textarea id="note" cols="每行中的字符数" rows="显示的行数">
         文本内容
     </textarea>
     <input type="submit" value="提交所填">
