--- a/src/notes/01html/01.md
+++ b/src/notes/01html/01.md
@@ -12,6 +12,31 @@
 | `<hr>`         | 定义水平线。         |
 | `<!--...-->`   | 定义一个注释。       |
 
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>定义标题</title>
+  </head>
+  <body>
+    <!-- 曹雪芹 -->
+    <h1>好了歌</h1>
+    <h3>跛足道人</h3>
+    <hr />
+    <p>
+      世人都晓神仙好,惟有功名忘不了!  古今将相在何方?荒冢一堆草没了。<br />
+      世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。<br />
+      世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。<br />
+      世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?<br />
+    </p>
+    <hr />
+  </body>
+</html>
+```
+
 :::
 
 :::snippet HTML 格式标签
